fix FF jump

--- a/src/blocks/slider-maxi/editor.scss
+++ b/src/blocks/slider-maxi/editor.scss
@@ -21,6 +21,11 @@
 			display: none !important;
 		}
 	}
+
+	.maxi-slide-block:not([data-slide-active='true']),
+	.maxi-slide-block:not([data-slide-active='true']) * {
+		pointer-events: none !important;
+	}
 }
 
 html body.maxi-blocks--active .maxi-slider-block[data-align='full'] {
